--- a/preact-client/src/pages/Services/NewPricesGrid.module.css
+++ b/preact-client/src/pages/Services/NewPricesGrid.module.css
@@ -16,7 +16,6 @@
 /* either have prices_spacer, prices_header, or prices_item */
 .prices_spacer {
 	grid-column: 1 / 13;
-	/* margin: 0 0.0rem; */
 	border-bottom: 1px solid grey;
 }
 .prices_header {
@@ -48,15 +47,15 @@
 
 @media screen and (max-width: 600px) {
 	.prices_item {
-		font-size: 1rem;
+		font-size: 0.95rem;
 	}
 
-.text_left {
-	text-align: left;
-	padding-left: 0.1rem;
-}
-.text_right {
-	text-align: right;
-	padding-right: 0.1rem;
-}
+	.text_left {
+		text-align: left;
+		padding-left: 0.1rem;
+	}
+	.text_right {
+		text-align: right;
+		padding-right: 0.1rem;
+	}
 }
